--- a/game1.html
+++ b/game1.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us - Pan-laan and Arco Blog</title>
+  <title>Welcome To Game 1</title>
  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body> 
 
   <header>
     <img src="logo.gif" alt="Blog Logo" class="logo">
-    <h1>HERALD & ARCO BLOG</h1>
-    <p>Welcome to our blog about learning game tutorials</p>
+    <h1>WELCOME TO GAME1</h1>
   </header>
 
   <nav>
