--- a/game2.html
+++ b/game2.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us - Pan-laan and Arco Blog</title>
+  <title>Welcome To Game 2</title>
  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body> 
 
   <header>
     <img src="logo.gif" alt="Blog Logo" class="logo">
-    <h1>HERALD & ARCO BLOG</h1>
-    <p>Welcome to our blog about learning game tutorials</p>
+    <h1>WELCOME TO GAME2</h1>
   </header>
 
   <nav>
@@ -77,6 +76,9 @@
     <div class="clickable-link-box">
       <a href="https://www.warhammer.com/en-WW/home?srsltid=AfmBOoqyqWtWmZVCikndnccgT8uTilBC3N2Emzvo28zKtNtMNTPc4m3a" target="_blank">Go to Official Warhammer Website</a>
     </div>
+
+
+    
   </main>
 
   <footer>
