--- a/tutorial.html
+++ b/tutorial.html
@@ -40,7 +40,7 @@
       </main>
 
       <footer>
-        &copy; 2025 Pan-laan & Arco. All rights reserved.
+        &copy; 2025 Pan-laan & Norman. All rights reserved.
       </footer>
 
 
